# aWASMlib

./: .gitignore  Cargo.toml  README.md
migrations/: 0001_migrations.sql
src/: aggregator.rs  database.rs  env.rs  lib.rs  pluginmanager.rs  plugins.rs
src/plugins/: config.rs  host.rs  plugin.rs
wit/: world.wit
