[workspace]
members = [
    ".", 
    "crates/awasmcli"
]

[package]
name = "awasmlib"
version = "0.1.0"
edition = "2021"
description = "Rust and WebAssembly-powered multimedia aggregator library and runtime"
license = "MIT"
repository = "https://github.com/5EUS/aWASMlib"
homepage = "https://github.com/5EUS/aWASMlib"
readme = "README.md"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
wasmtime = { version = "37.0.1", features = ["component-model"] }
wasmtime-wasi = { version = "37.0.1" }
wasmtime-wasi-http = { version = "37.0.1" }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2"
directories = "5"
sqlx = "0.8.6"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync"] }
anyhow = "1.0"
serde_json = "1.0"

[profile.dev]
opt-level = 0
debug = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 0

[build-dependencies]
# wit-bindgen = "0.45"

[dev-dependencies]
tempfile = "3"
